[package]
name = "meshtastic-2-signal"
version = "0.1.0"
edition = "2024"

[dependencies]
meshtastic = "0.1.8"
chrono = "0.4.42"
futures = "0.3.31"
mime_guess = "2.0.5"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "rt"]}
tracing = "0.1.41"
url = "2.5.7"

presage = { git = "https://github.com/whisperfish/presage" }
# presage-store-sqlite = { git = "https://github.com/whisperfish/presage" }
presage-store-sqlite = { git = "https://github.com/dq1mango/signal-tui" }
notify-rust = "4.11.7"
anyhow = "1.0.100"
directories = "6.0.0"
base64 = "0.22.1"
tempfile = "3.23.0"
tracing-subscriber = "0.3.20"
qrcodegen = "1.8.0"
uuid = "1.18.1"
hex = "0.4.3"
toml = "0.9.10"
serde = "1.0.228"


# For a discussion as to why, see: 
# https://github.com/whisperfish/libsignal-service-rs/tree/93c23cf27d27a17a803e34ea3dd6a82d268fa79e#working-around-the-issue-with-curve25519-dalek
[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
#
# linker = "aarch64-linux-gnu-gcc"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
# pre-build = ["apt-get install --assume-yes protobuf-compiler && protoc --version && false"]
pre-build = ["apt-get install --assume-yes zip && PB_REL='https://github.com/protocolbuffers/protobuf/releases' && curl -LO $PB_REL/download/v30.2/protoc-30.2-linux-aarch_64.zip && unzip protoc-30.2-linux-aarch_64.zip -d $HOME/.local && export PROTOC='$HOME/.local/bin/protoc' && apt-get install --assume-yes openssl libssl-dev"]
