[package]
name = "signal-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
mime_guess = "2.0.5"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "rt"]}
tracing = "0.1.41"
url = "2.5.7"

presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage" }
notify-rust = "4.11.7"
anyhow = "1.0.100"
directories = "6.0.0"
base64 = "0.22.1"
tempfile = "3.23.0"
tracing-subscriber = "0.3.20"
qrcodegen = "1.8.0"
uuid = "1.18.1"
hex = "0.4.3"


# For a discussion as to why, see: 
# https://github.com/whisperfish/libsignal-service-rs/tree/93c23cf27d27a17a803e34ea3dd6a82d268fa79e#working-around-the-issue-with-curve25519-dalek
[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

# [profile.dev]
# debug = false
